# AdventOfCode2022

./: .gitignore  CMakeLists.txt  README.md  clear.sh  q10a.cpp  q10b.cpp  q11.cpp  q1a  q1a.cpp  q1b  q1b.cpp  q2a  q2a.cpp  q2b  q2b.cpp  q3a  q3a.cpp  q3b  q3b.cpp  q4a.cpp  q4b.cpp  q5a.cpp  q5b.cpp  q6.cpp  q7.cpp  q8a.cpp  q8b.cpp  q9.cpp
data/: q11.txt  q3.txt  q5.txt
