project(adventofcode2022)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")

add_executable(q1a q1a.cpp)
add_executable(q1b q1b.cpp)

add_executable(q2a q2a.cpp)
add_executable(q2b q2b.cpp)

add_executable(q3a q3a.cpp)
add_executable(q3b q3b.cpp)

add_executable(q4a q4a.cpp)
add_executable(q4b q4b.cpp)

add_executable(q5a q5a.cpp)
add_executable(q5b q5b.cpp)

add_executable(q6 q6.cpp)

add_executable(q7 q7.cpp)

add_executable(q8a q8a.cpp)
add_executable(q8b q8b.cpp)

add_executable(q9 q9.cpp)

add_executable(q10a q10a.cpp)
add_executable(q10b q10b.cpp)